--- a/html/0-Readme.html
+++ b/html/0-Readme.html
@@ -92,6 +92,7 @@ following the instructions here : http://rubygems.org/read/chapter/3
 <h3><a name="section_2_1">Usage</a>
 </h3>
 
+<p>{ :authors: "Srikanth K Agaram", :title: "E-Book Library Build System" }</p>
 
 </body>
 </html>
